<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/subtext"
    android:layout_height="match_parent"

    tools:context="com.macdev.speedtest.History">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/headerTextColour"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/m_time"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="2.7"
                android:paddingBottom="3.0dip"
                android:paddingLeft="10.0dip"
                android:paddingTop="3.0dip"
                android:layout_gravity="center_vertical"
                android:text="@string/time"
                android:textColor="@color/newbg" />

            <TextView
                android:id="@+id/m_type"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="2.3"
                android:paddingLeft="11.0dip"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip"
                android:layout_gravity="center_vertical"
                android:text="@string/type"
                android:textColor="@color/newbg" />

            <TextView
                android:id="@+id/m_ping"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="3.0"
                android:gravity="center"
                android:paddingBottom="3.0dip"
                android:layout_gravity="center_vertical"
                android:paddingTop="3.0dip"
                android:text="@string/ping"
                android:textColor="@color/newbg" />

            <TextView
                android:id="@+id/m_download"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="3.0"
                android:gravity="right"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/download"
                android:textColor="@color/newbg" />

            <TextView
                android:id="@+id/m_upload"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="3.0"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingBottom="3.0dip"
                android:paddingRight="2.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/upload"
                android:textColor="@color/newbg" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>



</RelativeLayout>